collector-deploy.yaml
#collector-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kis-collector
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kis-collector
  template:
    metadata:
      labels:
        app: kis-collector
    spec:
      containers:
      - name: collector
        image: kis-collector:latest
        imagePullPolicy: Never
