django.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mydjango-deploy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mydjango
  template:
    metadata:
      labels:
        app: mydjango
    spec:
      containers:
      - name: django
        image: mydjango:latest
        imagePullPolicy: Never
        ports:
        - containerPort: 8000
        command: ["daphne", "-b", "0.0.0.0", "-p", "8000", "backend.asgi:application"]
---
apiVersion: v1
kind: Service
metadata:
  name: mydjango-service
spec:
  type: NodePort
  selector:
    app: mydjango
  ports:
  - port: 8000
    targetPort: 8000
    nodePort: 30080
